--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -31,6 +31,76 @@
         android:background="@drawable/border_input_background_white"
         android:backgroundTint="@color/white"
         android:layout_alignParentTop="true"/>
+    
+    <LinearLayout
+        android:id="@+id/footer"
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:layout_alignParentBottom="true"
+        android:background="@android:color/white"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:padding="16dp"
+        android:weightSum="3"
+        >
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_weight="1">
+            <ImageView
+                android:layout_width="16dp"
+                android:layout_height="20dp"
+                android:src="@drawable/location_icon_blue"/>
+            <TextView
+                android:layout_width="55dp"
+                android:layout_height="16dp"
+                android:textSize="14sp"
+                android:textColor="@color/dark_blue"
+                android:text="Explorar"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:layout_weight="1.2">
+            <ImageView
+                android:layout_width="16dp"
+                android:layout_height="20dp"
+                android:src="@drawable/car_notification"/>
+            <TextView
+                android:layout_width="105dp"
+                android:layout_height="16dp"
+                android:textSize="14sp"
+                android:textColor="@color/dark_blue"
+                android:text="Pesquisar vagas"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:layout_weight="1">
+            <ImageView
+                android:layout_width="16dp"
+                android:layout_height="20dp"
+                android:src="@drawable/bell"/>
+            <TextView
+                android:layout_width="80dp"
+                android:layout_height="16dp"
+                android:textSize="14sp"
+                android:textColor="@color/dark_blue"
+                android:text="Notificações"/>
+        </LinearLayout>
+
+    </LinearLayout>
+
+
 
 <!--    <Button-->
 <!--        android:id="@+id/button_vagas"-->
