--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -84,7 +84,7 @@
         android:layout_width="254dp"
         android:layout_height="56dp"
         android:layout_marginTop="32dp"
-        android:text="Morada"
+        android:text=""
         android:textSize="22dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.288"
@@ -106,7 +106,7 @@
         android:layout_width="254dp"
         android:layout_height="56dp"
         android:layout_marginTop="12dp"
-        android:text="Endereço de email"
+        android:text=""
         android:textSize="22dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.288"
@@ -128,7 +128,7 @@
         android:layout_width="254dp"
         android:layout_height="56dp"
         android:layout_marginTop="12dp"
-        android:text="Contacto"
+        android:text=""
         android:textSize="22dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.288"
